--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta name="robots" content="INDEX, FOLLOW">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-
   	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
   	<link rel="stylesheet" type="text/css" href="style.css">
   	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -55,7 +53,7 @@
     		<div class="row tight-width-whitespace">
     			<div class="col-sm-12">
     				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
-    				<h1 class="text-center hero-bloc-text tc-white ">
+    				<h1 class="text-center hero-bloc-text tc-white">
     					La chouette agence
     				</h1>
     				<div class="text-center">
@@ -72,7 +70,7 @@
     	<div class="container bloc-md">
     		<div class="row">
     			<div class="col-sm-12 text-center">
-    				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+              <h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
     			</div>
     		</div>
     		<div class="row voffset-lg med-width-whitespace">
@@ -105,15 +103,19 @@
     				<h3 class="mg-md text-center">
     					Illustrations
     				</h3>
-    				<p class="text-center ">
+    				<p class="text-center">
     					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
     				</p>
     			</div>
     		</div>
     		<div class="row voffset-lg voffset">
     			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-    				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+            <figure>
+              <p class="text-center">"La chouette agence est une excelente agence web !
+                 Les web designers ont réussi à capturer l'essence de notre entreprise et l'intégrer à notre site.
+                 Cela nous a aider à doubler nos ventes en ligne à Lyon."</p>
+              <figcaption>Maxime Guilbard, PDG de À vos fourchettes</figcaption>
+            </figure>
     			</div>
     		</div>
     	</div>
@@ -129,7 +131,8 @@
     					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
     				</h2>
     				<p class="text-center white">
-    					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+    					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
+              <a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
     				</p>
     			</div>
     		</div>
@@ -142,12 +145,15 @@
     	<div class="container bloc-lg">
     		<div class="row">
     			<div class="col-sm-12 text-center">
-    				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+            <h2 class="mg-md text-center tc-black">
+    					Nous travaillons avec beaucoup de clients,<br>
+              voici nos réalisations.
+    				</h2>
     			</div>
     		</div>
     		<div class="row tight-width-whitespace portfolio-row">
     			<div class="col-sm-6">
-    				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+    				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Refonte site web journal" class="img-responsive portfolio-thumb" /></a>
     				<h3 class="mg-md text-center">
     					Refonte d'un site web pour un journal local
     				</h3>
@@ -156,7 +162,7 @@
     				</p>
     			</div>
     			<div class="col-sm-6">
-    				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+    				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
     				<h3 class="mg-md text-center">
     					Création d'un site web pour photographes
     				</h3>
@@ -167,7 +173,7 @@
     		</div>
     		<div class="row tight-width-whitespace portfolio-row">
     			<div class="col-sm-6">
-    				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+    				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/></a>
     				<h3 class="mg-md text-center">
     					Création d'un site internet pour un voyageur
     				</h3>
@@ -176,7 +182,7 @@
     				</p>
     			</div>
     			<div class="col-sm-6">
-    				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+    				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" /></a>
     				<h3 class="mg-md text-center">
     					Conception d'un site pour une agence de mariage
     				</h3>
@@ -190,7 +196,7 @@
     <!-- bloc-4-portfolio END -->
 
     <!-- bloc-5-cta -->
-    <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+    <section class="bloc bgc-dark-slate-blue bg-banniere bloc-bg-texture texture-paper" id="bloc-5-cta">
     	<div class="container bloc-lg">
     		<div class="row">
     			<h2 class="mg-md text-center tc-white">
@@ -204,6 +210,10 @@
     </section>
     <!-- bloc-5-cta END -->
 
+    <!-- ScrollToTop Button -->
+    <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+    <!-- ScrollToTop Button END-->
+
   </main>
   <!-- MAIN END -->
 
@@ -212,7 +222,7 @@
     	<div class="container bloc-sm">
     		<div class="row">
     			<div class="col-sm-12">
-    				<p class="text-center white">
+    				<p class="text-center white space">
     					La chouette agence - Agence web basée à Lyon.<br>
     				</p>
     				<div class="row row-no-gutters social">
