Optimisation des images, ajout des fichiers minifié, modification de la page de contact meta description, h1, h2 et coordonnées

--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-  	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-  	<link rel="stylesheet" type="text/css" href="style.css">
-  	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-  	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-    <meta name="description" content="">
+  	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+  	<link rel="stylesheet" type="text/css" href="style.min.css">
+  	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+  	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+    <meta name="description" content="La chouette agence - Parlons web design ! Collaborer avec notre agence. Parlez-nous de votre projet en complétant le formulaire de contact ci-dessous.">
     <title>La chouette agence - Contact</title>
 
 
@@ -54,9 +54,13 @@
       	<div class="container bloc-lg">
       		<div class="row">
       			<div class="col-sm-12">
-      				<h1 class="text-center hero-bloc-text tc-white">
-      					Parlons web design !
+              <h1 class="text-center hero-bloc-text tc-white">
+      					Formulaire de contact
       				</h1>
+              <hr>
+      				<h2 class="text-center tc-white">
+      					Parlons web design !
+      				</h2>
       				<p class="text-center mg-lg tc-white tight-width-whitespace">
       					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
       					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
@@ -102,8 +106,11 @@
       				</form>
       			</div>
       			<div class="col-sm-6">
-      				<p>
-      					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+              <h2 class="text-center hero-bloc-text tc-black">
+                Nos coordonnées :
+              </h2>
+      				<p class="text-center">
+      					<strong>Adresse email :</strong> contact@lachouetteagence.com<br><strong>Adresse :</strong> 2 place Sathonay 69001 Lyon<br><strong>Nos horaires :</strong> Ouvert de 9h à 18h, du lundi au vendredi<br>
       				</p>
       			</div>
       		</div>
@@ -154,10 +161,10 @@
     </footer>
     <!-- Footer - bloc-8 END -->
 
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js"></script>
+    <script src="./js/jquery-2.1.0.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/blocs.min.js"></script>
+    <script src="./js/jqBootstrapValidation.min.js"></script>
+    <script src="./js/formHandler.min.js"></script>
   </body>
 </html>
