--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
   	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-  	<link rel="stylesheet" type="text/css" href="style.min.css">
+  	<link rel="stylesheet" type="text/css" href="style.css">
   	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
   	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
     <meta name="description" content="L'entreprise de webdesign, la chouette agence située à Lyon aide les entreprises à devenir attractives et visibles sur Internet">
@@ -27,7 +27,7 @@
     	<div class="container bloc-sm">
     		<nav class="navbar row">
     			<div class="navbar-header">
-    				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo La chouette agence" height="40"/></a>
+    				<a class="navbar-brand" href="index.html"><img class="navbar-logo" src="img/la-chouette-agence.png" alt="Logo La chouette agence" height="40"/></a>
     				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
     					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     				</button>
@@ -228,22 +228,22 @@
     				<div class="row row-no-gutters social">
     					<div class="col-sm-3">
     						<div class="text-center">
-    							<a class="social" href="https://twitter.com/" target="_blank"><span class="fa fa-twitter icon-md"></span></a>
+    							<a class="social" href="https://twitter.com/" title="Twitter" target="_blank"><span class="fa fa-twitter icon-md"></span></a>
     						</div>
     					</div>
     					<div class="col-sm-3">
     						<div class="text-center">
-    							<a class="social" href="https://www.facebook.com/" target="_blank"><span class="fa fa-facebook icon-md"></span></a>
+    							<a class="social" href="https://www.facebook.com/" title="Facebook" target="_blank"><span class="fa fa-facebook icon-md"></span></a>
     						</div>
     					</div>
     					<div class="col-sm-3">
     						<div class="text-center">
-    							<a class="social" href="https://dribbble.com/" target="_blank"><span class="fa fa-dribbble icon-md"></span></a>
+    							<a class="social" href="https://dribbble.com/" title="Dribbble" target="_blank"><span class="fa fa-dribbble icon-md"></span></a>
     						</div>
     					</div>
     					<div class="col-sm-3">
     						<div class="text-center">
-    							<a class="social" href="https://www.instagram.com/lachouetteagence_lyon" target="_blank"><span class="fa fa-instagram icon-md"></span></a>
+    							<a class="social" href="https://www.instagram.com/lachouetteagence_lyon" title="Instagram" target="_blank"><span class="fa fa-instagram icon-md"></span></a>
     						</div>
     					</div>
     				</div>
