--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
   	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-  	<link rel="stylesheet" type="text/css" href="style.css">
+  	<link rel="stylesheet" type="text/css" href="style.min.css">
   	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
   	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
     <meta name="description" content="L'entreprise de webdesign, la chouette agence située à Lyon aide les entreprises à devenir attractives et visibles sur Internet">
